<resources>
    <string name="app_name">Leon-Trans</string>
    <string name="logo_of_leontrans_tm_hint">logo of leontrans_TM</string>
    <string name="login_hello_TV">Sign in</string>
    <string name="login_input_field_hint">login</string>
    <string name="password_input_field_hint">password</string>
    <string name="signIn_btn">Sign in</string>
    <string name="test_text_card_view_activity">Card View</string>
    <string name="menu_item_title">showFilter navigation drawer</string>
    <string name="reload_activity_cards_menu">Reload card activity</string>
    <string name="TV_name">Name</string>
    <string name="TV_city">City</string>
    <string name="TV_email">Email</string>
    <string name="TV_telephone">Phone</string>
    <string name="TV_skype">Skype</string>
    <string name="TV_icq">ICQ</string>
    <string name="TV_website">Website</string>
    <string name="TV_occupation">Occupation</string>
    <string name="TV_occupation_type">Occupation type</string>
    <string name="TV_occupation_description">Occupation description</string>
    <string name="TV_register_date">Register date</string>
    <string name="TV_last_online">last online</string>
    <string name="date_to">date_to</string>
    <string name="no_date">no date</string>
    <string name="date_from">date_from</string>
    <string name="type">type</string>
    <string name="city_from_ru">city_from_ru</string>
    <string name="city_to_ru">city_to_ru</string>
    <string name="country_to_ru">country_to_ru</string>
    <string name="country_from_ru">country_from_ru</string>
    <string name="userid_creator">id</string>
    <string name="truck">Any</string>
    <string name="trailer">Semitrailer</string>
    <string name="half_trailer">Half-trailer</string>
    <string name="top">Top</string>
    <string name="side">Side</string>
    <string name="back">Back</string>
    <string name="fulluntent">With full movable curtains</string>
    <string name="uncrossbar">With the removal of cross bars</string>
    <string name="unrack">With the removal of racks</string>
    <string name="ungate">Without the gates</string>
    <string name="gydrobort">Loadinglift</string>
    <string name="any">Any</string>
    <string name="easy">Passenger car</string>
    <string name="bus">Bus</string>
    <string name="avto">Autotransporter</string>
    <string name="fuel_oil">Fuel truck (oil truck)</string>
    <string name="concrete">Concrete carrier</string>
    <string name="gas">Gas carrier</string>
    <string name="hard">Truck</string>
    <string name="grain">Grain carrier</string>
    <string name="isotherms">Isotherm</string>
    <string name="containertrans">Container carrier</string>
    <string name="tap">Tap</string>
    <string name="closed">Covered</string>
    <string name="trees">Timber carrier</string>
    <string name="microbus">Minibus</string>
    <string name="oversized">Oversized</string>
    <string name="unclosed">Opened</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="tipper">Dump truck</string>
    <string name="animaltruck">Cattle carrier</string>
    <string name="awning">Tent</string>
    <string name="trall">Trall</string>
    <string name="avtotipper">Tractor</string>
    <string name="fullmetal">Full Metal</string>
    <string name="fuel_oil_small">Barrel</string>
    <string name="evacuator">Evacuator</string>
    <string name="request">Request</string>
    <string name="payform_777">Any</string>
    <string name="payform_1">Cash</string>
    <string name="payform_3">Cashless</string>
    <string name="payform_6">Cashless with VAT</string>
    <string name="payform_4">Combined</string>
    <string name="payform_71">Electronic payment</string>
    <string name="payform_72">Map</string>
    <string name="paymoment_52">On the loading</string>
    <string name="paymoment_53">On the unloading</string>
    <string name="paymoment_6">On originals</string>
    <string name="paymoment_61">The deferment of payment</string>
    <string name="telephone_numbers">telephone numbers</string>
    <string name="close_telephone_dialog">return</string>
    <string name="show_telephones">show telephones</string>
    <string name="my_profile">My profile</string>
    <string name="advertisement_list">Advertisement list</string>
    <string name="filter_settings">Filter settings</string>
    <string name="favourite_cards_activity">Favourites</string>
    <string name="app_settings">Settings</string>
    <string name="filter_1">Filter 1</string>
    <string name="filter_2">Filter 2</string>
    <string name="filter_3">Filter 3</string>
    <string name="filter_4">Filter 4</string>
    <string name="filter_5">Filter 5</string>
    <string name="filter_6">Filter 6</string>
    <string name="filter_7">Filter 7</string>
    <string name="filter_8">Filter 8</string>
    <string name="filter_9">Filter 9</string>
    <string name="filter_10">Filter 10</string>
    <string name="cancel_filter_btn">Cancel</string>
    <string name="save_filter_btn">Save</string>
    <string name="tir">TIR</string>
    <string name="cmr">CMR</string>
    <string name="ekmt">EKMT</string>
    <string name="t1">T1</string>
    <string name="mbook">Medical book</string>
    <string name="customscontrol">The customs control</string>
    <string name="dangerous">Dangerous</string>
    <string name="undangerous">Not dangerous</string>
    <string name="adr1">ADR 1</string>
    <string name="adr2">ADR 2</string>
    <string name="adr3">ADR 3</string>
    <string name="adr4">ADR 4</string>
    <string name="adr5">ADR 5</string>
    <string name="adr6">ADR 6</string>
    <string name="adr7">ADR 7</string>
    <string name="adr8">ADR 8</string>
    <string name="adr9">ADR 9</string>
    <string name="adr10">ADR 10</string>
    <string-array name="notify_types">
        <item>Not selected</item>
        <item>Transport</item>
        <item>Product</item>
    </string-array>
    <string-array name="car_types">
        <item>Not selected</item>
        <item>Any</item>
        <item>Bus</item>
        <item>Autotransporter</item>
        <item>Fuel truck (oil truck)</item>
        <item>Concrete carrier</item>
        <item>Gas carrier</item>
        <item>Truck</item>
        <item>Grain carrier</item>
        <item>Isotherm</item>
        <item>Container carrier</item>
        <item>Tap</item>
        <item>Covered</item>
        <item>Passenger car</item>
        <item>Timber carrier</item>
        <item>Minibus</item>
        <item>Oversized</item>
        <item>Opened</item>
        <item>Refrigerator</item>
        <item>Dump truck</item>
        <item>Cattle carrier</item>
        <item>Tent</item>
        <item>Trall</item>
        <item>Tractor</item>
        <item>Full Metal</item>
        <item>Barrel</item>
        <item>Evacuator</item>
    </string-array>
    <string name="car_kind">The kind of car</string>
    <string name="capacity_from">Capacity from</string>
    <string name="capacity_to">Capacity to</string>
    <string name="weight_from">Weight from</string>
    <string name="weight_to">Weight to</string>
    <string name="country_from">Country from</string>
    <string name="country_to">Country to</string>
    <string name="city_from">City from</string>
    <string name="city_to">City to</string>
    <string name="notification_type">Notification type</string>
    <string name="car_type">Car type</string>
    <string name="loading">Loading</string>
    <string name="docs">Documents</string>
    <string name="adr">ADR</string>
    <string name="notification_title">New bids!</string>
    <string name="notification_content">There is new bid on your filters.</string>
    <string name="notification_warning">Check new bids!</string>
    <string name="saved_favourite_bids">Bid saved in favourite</string>
    <string name="delete_favourite_bids">Bid deleted from favourite</string>
    <string name="employee_owner_btn">Employee</string>
    <string name="show_new_cards_btn">Show more cards</string>
    <string name="go_up_to_list">↑ To top ↑</string>
    <string name="user_card_creator">Profile</string>
    <string name="filter_editor">Filter #</string>
    <string name="internet_dialog_title">You are offline!</string>
    <string name="internet_dialog_message">Check your internet connection and try again.</string>
    <string name="ag">АI</string>
    <string name="apop">АIRC</string>
    <string name="apf">АPC</string>
    <string name="at">JC</string>
    <string name="atzt">PC</string>
    <string name="atov">ALLC</string>
    <string name="bkp">MCE</string>
    <string name="bsok">MASC</string>
    <string name="by">СM</string>
    <string name="bf">CF</string>
    <string name="b_kpp">PCPE</string>
    <string name="b_kpf">PCPC</string>
    <string name="b_tp">PTE</string>
    <string name="wat">PC</string>
    <string name="vk">MC</string>
    <string name="carrier">Carrier</string>
    <string name="customer">Customer</string>
    <string name="manager">Forwarder</string>
    <string name="production">Manufacture</string>
    <string name="trade">Trade</string>
    <string name="services">Service</string>
    <string name="no_selected">Not selected</string>
    <string name="back_pressed">Press once again to exit!</string>
    <string name="refresh">Refresh</string>
</resources>