<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@color/color"
            android:scaleType="center"
            app:srcCompat="@drawable/icon_truck" />

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="64dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date_from"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="8sp"
                android:text="@string/date_from"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <View
                android:layout_width="78dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@android:color/white"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/date_to"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:fontFamily="sans-serif"
                android:text="@string/date_to"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <Button
            android:id="@+id/country_from_ru"
            android:layout_width="100dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:clickable="false"
            android:fontFamily="sans-serif"
            android:text="@string/country_from_ru"
            android:textColor="@color/dark"
            android:textSize="10sp" />

        <Button
            android:id="@+id/city_from_ru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:clickable="false"
            android:fontFamily="sans-serif"
            android:text="@string/city_from_ru"
            android:textAllCaps="false"
            android:textColor="@color/dark"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/country_to_ru"
            android:layout_width="100dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:clickable="false"
            android:fontFamily="sans-serif"
            android:text="@string/country_to_ru"
            android:textColor="@color/dark"
            android:textSize="10sp" />

        <Button
            android:id="@+id/city_to_ru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:clickable="false"
            android:fontFamily="sans-serif"
            android:text="@string/city_to_ru"
            android:textAllCaps="false"
            android:textColor="@color/dark"
            android:textSize="16sp"
            android:textStyle="bold" />
        </LinearLayout>

    <Button
        android:id="@+id/routBtn"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:clickable="false"
        android:fontFamily="sans-serif"
        android:text="A ↔ B"
        android:textAllCaps="false"
        android:textColor="@color/dark"
        android:textSize="12sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/trans_type"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button"
            android:clickable="false"
            android:fontFamily="sans-serif"
            android:text="trans_type "
            android:textAllCaps="false"
            android:textColor="@color/dark"
            android:textSize="14sp" />

        <Button
            android:id="@+id/goods"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/button"
            android:clickable="false"
            android:fontFamily="sans-serif"
            android:text="goods"
            android:textAllCaps="false"
            android:textColor="@color/dark"
            android:textSize="14sp" />

        <Button
            android:id="@+id/pay_type"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/button"
            android:clickable="false"
            android:fontFamily="sans-serif"
            android:text="pay_type "
            android:textAllCaps="false"
            android:textColor="@color/dark"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:fontFamily="sans-serif"
                android:text="name"
                android:textAllCaps="false"
                android:textColor="#726f6f"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/telephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:text="@string/show_telephones"
                android:textColor="@color/dark"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/icon_asterisk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/icon_unfavourite" />

    </LinearLayout>

</LinearLayout>